--- a/style.css
+++ b/style.css
@@ -1,123 +1,160 @@
 * {
     box-sizing: border-box;
-}
-
-body {
-    font-size: 16px;
-    font-family: Verdana, sans-serif;
-    line-height: 1.5;
     margin: 0;
     padding: 0;
 }
 
-#content-wrapper {
-    display: flex;
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
+
+body {
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    background-color: #f2f2f2;
 }
 
-aside {
+header {
+    display: flex;
+    align-items: center;
     background-color: white;
-    padding: 0.5rem;
-    margin-right: 1rem;
-    border: 1px solid #008000;
-    flex: 1;
+    padding: 0.5rem 20px;
 }
 
-aside h3 {
+#logo {
+    height: 50px; 
+    margin-right: 10px;
+}
+
+header h1 {
+    font-size: 28px;
+    color: #000;
+    margin: 0;
+}
+
+
+
+nav {
     background-color: #008000;
-    color: white;
-    padding: 0.5rem;
-    margin: 0;
-}
-
-aside a {
-    display: inline-block;
-    padding: 0.5rem;
-    margin: 0;
-    text-decoration: none;
-    color: #008000;
-}
-
-aside section {
-    margin-bottom: 1rem;
-    border: 1px solid #008000;
-}
-
-main {
-    flex: 4;
-    padding: 0.5rem;
-    background-color: #fff;
-    order: 1;
-}
-
-main h2 {
-    margin-top: 0;
-    white-space: nowrap;
-}
-
-article img {
-    float: left;
-    border: 3px double #333;
-    margin: 0.5rem 1rem 0.5rem 0;
-}
-
-section {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-section div {
-    background-color: #f7f7f7;
-    border: 1px solid #008000;
-    border-radius: 10px;
-    text-align: center;
-    flex: 1;
-    margin-right: 1rem;
-    padding: 1rem;
-}
-
-section div:last-child {
-    margin-right: 0;
-}
-
-section h2 {
-    background-color: #008000;
-    color: white;
-    padding: 0.5rem;
-    margin: 0;
-    border-radius: 10px 10px 0 0;
-}
-
-section img {
-    border: 3px double #333;
-    margin: auto;
-    display: block;
+    width: 100%;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    text-align: center;
-    background-color: #008000;
+    display: flex;
+    justify-content: start; 
+    padding-left: 20px;
 }
 
 nav ul li {
-    display: inline-block;
-    margin: 0;
-    padding: 1rem;
+    margin-right: 20px;
 }
 
 nav ul li a {
-    text-decoration: none;
+    display: inline-block;
+    padding: 15px 20px;
     color: white;
+    text-decoration: none;
     font-weight: bold;
 }
 
 nav ul li a:hover {
     background-color: black;
     color: #9ae39a;
+}
+
+#content-wrapper {
+    display: flex;
+    width: 90%;
+    max-width: 1200px;
+    margin: 20px auto;
+}
+
+aside {
+    background-color: #ccc; 
+    padding: 1rem;
+    border: 1px solid #008000;
+    flex: 1;
+    order: -1; 
+}
+
+aside section {
+    margin-bottom: 1rem;
+    background-color: white;
+    border: 1px solid #008000;
+}
+
+aside h3 {
+    background-color: #008000;
+    color: white;
+    padding: 0.5rem;
+    text-align: center;
+    margin: 0;
+}
+
+aside a {
+    padding: 1rem;
+    text-decoration: none;
+    color: #008000;
+    display: block;
+}
+
+main {
+    flex: 4;
+    padding: 1rem;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+article img {
+    float: left;
+    margin: 0.5rem 1rem 1rem 0;
+    border: 3px double #333;
+    width: 400px;
+}
+
+
+.bottom-section {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+.box {
+    flex: 1;
+    background-color: #e7f7e7; 
+    border: 1px solid #008000; 
+    border-radius: 10px; 
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
+
+.box h2 {
+    background-color: #008000; 
+    color: white; 
+    padding: 0.5rem;
+    margin: 0;
+    border-radius: 10px 10px 0 0; 
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.box img {
+    border: 3px double #333; 
+    margin: 10px auto; 
+    display: block;
+    width: 200px;
+    height: auto;
+}
+
+.box p {
+    background-color: #d8e8d8; 
+    padding: 10px;
+    font-weight: bold;
+    color: #3d8235; 
+    text-align: center;
+    margin: 0;
+    border-top: 1px solid #008000; 
 }
